--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link href='https://fonts.googleapis.com/css?family=Comfortaa:400,300,700' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
@@ -31,12 +32,56 @@
 				<h1>Find a coffee shop near you</h1>
 				<input type="text">
 				<button>Go</button>
+			</div>
+
+			<div class="results-container">
+				<div id="seach-results"></div>
+				<div class="results"></div>
+			</div>
+
+			<div class="hidden">
+				
+				<div class="col3">
+					<div>
+						<div class="info">
+							<h3>Sally's Coffee Shop</h3>
+							<div class="p-info">
+								<p>Santa Monica, CA</p>
+								<p class="p-left">~4.2 miles</p>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="info">
+							<h3>Sally's Coffee Shop</h3>
+							<div class="p-info">
+								<p>Santa Monica, CA</p>
+								<p class="p-left">~4.2 miles</p>
+							</div>
+
+						</div>
+					</div>
+					<div>
+						<div class="info">
+							<h3>Sally's Coffee Shop</h3>
+							<div class="p-info">
+								<p>Santa Monica, CA</p>
+								<p class="p-left">~4.2 miles</p>
+							</div>
+
+						</div>
+					</div>
+
+
+				</div>
+
+
 
 			</div>
 
 		</section>
 
-
+		<footer></footer>
 
 	</div>
 </body>
