--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link href='https://fonts.googleapis.com/css?family=Comfortaa:400,300,700' rel='stylesheet' type='text/css'>
 
+	<script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
+
 </head>
 <body>
 	<div class="container">
