--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link href='https://fonts.googleapis.com/css?family=Comfortaa:400,300,700' rel='stylesheet' type='text/css'>
 
-	<script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAh63GOfFQA-cceefZL0UBvXWv_Q2uOsCE&libraries=places"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
@@ -41,7 +41,7 @@
 
 			<div class="results-container">
 				<div id="seach-results"></div>
-				<div class="results"></div>
+				<div id="results"></div>
 			</div>
 
 			<div class="hidden">
